# nvidia-cdi-device-plugin

./: .gitignore  Cargo.toml  build.rs  flake.nix  go.mod  go.sum  main.go
daemonset/: nvidia-cdi-device-plugin.yaml  oom-gpu-operator.yaml
src/: main.rs
