[package]
name = "nvidia-cdi-device-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
glob = "0.3.3"
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "sync", "signal"] }
tokio-stream = "0.1.15"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tower = "0.5.2"
hyper-util = { version = "0.1.19", features = ["tokio"] }

[build-dependencies]
prost-build = "0.14.1"
tonic-prost-build = "0.14.2"
protoc-bin-vendored = "3.1.0"
